# knee_coord

./: .gitignore  Bill_Kinematic.csv  README.md  animation.py  area.py  bone.py  config.py  config.py.example  contact.py  data_column.py  depth_map.py  dof.py  interpolate.py  intersection.py  jcs.py  main.py  myio.py  playground.py  pyproject.toml  render.py  requirements.txt  rotation.py  smooth.py  task.py  thickness.py  utils.py
.github/workflows/: pylint.yml
ContactPara/: Femur_Cartilage_fixed_2.stl  Femur_Cartilage_fixed_3.stl  梓森任务3.docx
ContactPara/Assic/: Femur_Cartilage_freecad3.stl
ContactPara/二进位/: Femur_Cartilage.stl  Tibia_Cartilage_Lateral.stl  Tibia_Cartilage_Medial.stl
RT_Transform/: PointList.txt.bak
acc_task/: Coordination_Pt.txt  Tibia.stl
archive/RT_Transform/: 梓森任务2.docx
archive/acc_task/: Tibia_Cart_Smooth.stl  sical_test_rm.csv
archive/interpolate/: C_G_1st.txt
archive/model_0207/: Tibia_Smooth.stl
archive/model_0220/: Bill_Kinematic_ControlShoes.csv
archive/model_0313/: Second_Motion.csv
archive/model_0403/: ana_000002.stl  poses_2025_03_05_11-08.csv  sql_dump_dpzm_02_sd_04_ns_poses_2025_03_05_11-08.sql
archive/model_0509/: Coordinate.txt  (+2 more)
entry_task/: PointList.txt  main.py
interpolate/: RK_G_1st.txt  RM_G_1st.txt
model_0207/: Coordinate.txt  cleaned_trial_2_rs.csv
model_0220/: Bill_Kinematic_RK.csv
model_0313/: First_Profile.csv
model_0403/: ana_000001.stl  sql_dump_dpzm_02_sd_04_ns_poses_2025_03_05_11-08.sql
test_case/: calibration.txt  kneefit_example_Euler.xlsx  pose_test_femur.jtap  pose_test_tibia.jtap
(+81 files in other folders)
