[project]
name = "knee-coord"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=14.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pyglet<2",
    "pyrender>=0.1.45",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "trimesh[easy]>=4.6.10",
    "vtk>=9.4.2",
]
